# data-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: extract.rs  test.rs
src/: lib.rs  raw.rs  read.rs
