[package]
name = "pak"
version = "0.1.0"
authors = ["noxivs <sum.noxivs@gmail.com>"]

description = "This crate provides a packaging tool."
repository = "https://github.com/d2ce/pak-rs"
readme = "README.md"
keywords = ["byte", "binary", "tools"]
license = "MIT/Apache-2.0"

[dependencies]
fnv = "1.0.5"
byteorder_extended = { git = "https://github.com/d2ce/byteorder-extended" }